Release Windows portable app v0.1.16
